tests/fixtures/rules/require-dot-notation/bad/snake-case.js
let a = b['snake_cased'];
